# grufinity

./: Cargo.toml  README.md  TODO.md  pyproject.toml
src/: dataset.rs  errors.rs  lib.rs  mingru.rs  model.rs  parallel_scan.rs  tbptt.rs
