[package]
name = "grufinity"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.16.0", default-features = false, features = ["autodiff", "autotune", "train", "metrics"] }
rand = "0.8.5"
indicatif = "0.17.7"
bincode = "=2.0.0-rc.3"
bincode_derive = "=2.0.0-rc.3"

[features]
default = ["wgpu"]  # Default backend uses WGPU

# Core features - no dependencies included here
wgpu = ["burn/wgpu"]
fusion = ["burn/fusion"]
candle = ["burn/candle"]
tch = ["burn/tch"]
ndarray = ["burn/ndarray"]
autodiff = ["burn/autodiff"]
autotune = ["burn/autotune"]

# Optional CUDA features - these should be explicitly requested
candle-cuda = ["candle", "burn/candle-cuda"]
cuda-jit = ["burn/cuda-jit"]

# Optimizer selection for TBPTT (exactly one should be enabled)
optimizer-adam = []  # Use Adam optimizer for TBPTT
optimizer-sgd = []   # Use SGD optimizer for TBPTT

# Combined feature flags for convenience (non-CUDA)
wgpu-fusion = ["wgpu", "fusion", "autodiff", "autotune"]
candle-fusion = ["candle", "fusion", "autodiff"]

# Combined CUDA features - these are opt-in only
cuda-full = ["cuda-jit", "fusion", "autodiff"]
candle-cuda = ["candle", "burn/candle-cuda"]
candle-cuda-full = ["candle", "candle-cuda", "fusion", "autodiff"]

# Apple Metal support for Candle
candle-metal = ["candle", "burn/metal"]
candle-metal-full = ["candle", "burn/metal", "fusion", "autodiff"]

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "generate"
path = "src/bin/generate.rs"

[[bin]]
name = "simple_generate"
path = "src/bin/simple_generate.rs"

[[bin]]
name = "tbptt_train"
path = "src/bin/tbptt_train.rs"

