[package]
name = "grufinity"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { git = "https://github.com/Tracel-AI/burn", rev = "5e63b69d30552939a05c60a01d39b9a61c03da78", default-features = false, features = ["autodiff", "autotune", "train", "metrics"] }
rand = "0.8.5"
indicatif = "0.17.7"
bincode = "=2.0.0-rc.3"
bincode_derive = "=2.0.0-rc.3"
serde_json = "1.0"

[features]
default = []  # No default backend - user must explicitly choose

# Core features - no dependencies included here
wgpu = ["burn/wgpu"]
fusion = ["burn/fusion"]
candle = ["burn/candle"]
tch = ["burn/tch"]
ndarray = ["burn/ndarray"]
autodiff = ["burn/autodiff"]
autotune = ["burn/autotune"]

# Optional CUDA features - these should be explicitly requested
candle-cuda = ["candle", "burn/candle-cuda"]
cuda = ["burn/cuda"]

# Optimizer selection for TBPTT (exactly one should be enabled)
optimizer-adam = []  # Use Adam optimizer for TBPTT
optimizer-sgd = []   # Use SGD optimizer for TBPTT

# Combined feature flags for convenience (non-CUDA)
wgpu-fusion = ["wgpu", "fusion", "autodiff", "autotune"]
candle-fusion = ["candle", "fusion", "autodiff"]

# Combined CUDA features - these are opt-in only
cuda-full = ["cuda", "fusion", "autodiff"]
candle-cuda-full = ["candle", "candle-cuda", "fusion", "autodiff"]

# Apple Metal support for Candle
candle-metal = ["candle", "burn/metal"]
candle-metal-full = ["candle", "burn/metal", "fusion", "autodiff"]

[[bin]]
name = "generate"
path = "src/bin/generate.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"

