[package]
name = "grufinity"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { git = "https://github.com/Tracel-AI/burn", rev = "497a0c1dda4682e50af5bec8d6750fa22f385cdd", default-features = false, features = ["autodiff", "train", "metrics"] }
rand = "0.8.5"
indicatif = "0.17.7"
bincode = "=2.0.0-rc.3"
bincode_derive = "=2.0.0-rc.3"
serde_json = "1.0"
clap = { version = "4.4.18", features = ["derive"] }

[features]
default = []  # No default backend - user must explicitly choose

# Core features - no dependencies included here
wgpu = ["burn/wgpu"]
vulkan = ["burn/vulkan"]  # Explicit Vulkan backend
fusion = ["burn/fusion"]
candle = ["burn/candle"]
tch = ["burn/tch"]
ndarray = ["burn/ndarray"]
autodiff = ["burn/autodiff"]
autotune = ["burn/autotune"]
swiglu = [] # Use SwiGLU activation (otherwise uses SiLU)
tanh = [] # Apply tanh nonlinearity between chunks (default: disabled)

# Optional CUDA features - these should be explicitly requested
candle-cuda = ["candle", "burn/candle-cuda"]
cuda = ["burn/cuda"]

# Optimizer selection for TBPTT (exactly one should be enabled)
optimizer-adam = []  # Use Adam optimizer for TBPTT
optimizer-sgd = []   # Use SGD optimizer for TBPTT

# Combined feature flags for convenience (non-CUDA)
wgpu-fusion = ["wgpu", "fusion", "autodiff", "autotune"]
vulkan-fusion = ["vulkan", "fusion", "autodiff", "autotune"]  # Vulkan with optimizations
# For backward compatibility
wgpu-spirv-fusion = ["vulkan", "fusion", "autodiff", "autotune"]  # Legacy alias for vulkan-fusion
candle-fusion = ["candle", "fusion", "autodiff"]

# Combined CUDA features - these are opt-in only
cuda-full = ["cuda", "fusion", "autodiff"]
candle-cuda-full = ["candle", "candle-cuda", "fusion", "autodiff"]

# Apple Metal support for Candle
candle-metal = ["candle", "burn/metal"]
candle-metal-full = ["candle", "burn/metal", "fusion", "autodiff"]

[[bin]]
name = "generate"
path = "src/bin/generate.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"

