[project]
name = "grufinity"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
cu124 = [
  "torch==2.5.1+cu124",
  "torchvision==0.20.1+cu124",
  "torchaudio==2.5.1+cu124"
]
hip = [
  "torch==2.5.1+rocm",
  "torchvision==0.20.1+rocm",
  "torchaudio==2.5.1+rocm"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "extra == 'cu124'" },
  { index = "pytorch-rocm",  marker = "extra != 'cu124' and extra == 'hip'" }
]
torchvision = [
  { index = "pytorch-cu124", marker = "extra == 'cu124'" },
  { index = "pytorch-rocm",  marker = "extra != 'cu124' and extra == 'hip'" }
]
torchaudio = [
  { index = "pytorch-cu124", marker = "extra == 'cu124'" },
  { index = "pytorch-rocm",  marker = "extra != 'cu124' and extra == 'hip'" }
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2"
explicit = true